# ai_wedding_planner

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  cli.py  client.py  docker-compose.yml  main.py  mcp.config.example.json  pyproject.toml
.claude/: code-style.md  testing.md
.cursor/: rules.mdc
agents/: wedding_agent.py
agents/agent/: __init__.py  agent.py  types.py
agents/client/: __init__.py  anthropic_client.py  base.py  client.py  errors.py  openai_client.py  protocols.py  schema.py  types.py
agents/client/anthropic/: __init__.py  adapter.py  types.py
agents/client/openai/: __init__.py  adapter.py  types.py
agents/prompts/: base.py  prompts.py  types.py
agents/prompts/templates/: base.jinja  vendor_search_prompt.jinja  wedding_prompt.jinja
agents/prompts/tests/: test_prompts.py
agents/tools/: __init__.py  agent_tool.py  orchestrator.py  protocols.py  registry.py  types.py  web_search.py
agents/tools/mcp/: __init__.py  apify.py  client_manager.py  config.py  definitions.py  tool.py
agents/tools/tools/: __init__.py  agent_tool.py  days_until_date.py  save_vendor.py  servers.py  web_search.py
api/: app.py  dependencies.py  main.py  schemas.py
api/routes/: chat.py
api/static/: app.js  index.html  styles.css
db/: config.py  database.py  models.py
observability/: __init__.py  logging.py  middleware.py
prompts/: base.py  prompt.py  prompts.py
prompts/templates/: base.jinja  wedding_prompt.jinja
prompts/tests/: test_base_jinja.py  test_prompts.py
services/: client_service.py  message_service.py  types.py  wedding_service.py
services/stores/: client_store.py  message_store.py  wedding_store.py
services/tests/: test_client_service.py  test_message_service.py  test_service_flow_e2e.py  test_wedding_service.py
tests/: base.py  conftest.py
tests/agents/: mock_data.py  test_adapter_e2e.py  test_agent.py  test_agent_tool.py  test_anthropic_adapter.py  test_apify_mcp_e2e.py  test_jinja_prompt.py  test_mcp_config.py  test_mcp_tool.py  test_openai_adapter.py  test_openai_tool_schema.py  test_prompts.py  test_save_vendor.py  test_tool_orchestrator.py  test_tool_protocol.py  test_tool_registry.py  test_web_search.py
tests/services/: mock_data.py  test_client_service.py  test_message_service.py  test_service_flow_e2e.py  test_wedding_service.py
(+10 files in other folders)
