[project]
name = "ai-wedding-planner"
version = "0.1.0"
description = "Wedding planner AI assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "jinja2>=3.1.6",
    "mcp>=1.28.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
# Omit testpaths — pytest discovers test_*.py files anywhere under the project root.
