[project]
name = "ai-wedding-planner"
version = "0.1.0"
description = "Wedding planner AI assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.49.0",
    "asyncio>=4.0.0",
    "fastapi>=0.115.0",
    "jinja2>=3.1.6",
    "mcp>=1.28.0",
    "openai>=1.68.0",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
# Omit testpaths — pytest discovers test_*.py files anywhere under the project root.
